<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >


    <!--<group >-->
        <!--<item-->
            <!--android:id="@+id/nav_info"-->
            <!--android:icon="@drawable/ic_account_circle"-->
            <!--android:title="@string/my_info"-->
            <!--/>-->

    <!--</group>-->
    <group >
        <item
            android:id="@+id/nav_nearBy"
            android:icon="@drawable/ic_restaurant_gray_24dp"
            android:title="@string/NearBy_res" />

    </group>
    <group >
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_history"
            android:title="@string/order_history" />

    </group>

    <group >
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit"
            android:title="@string/menu_logout" />

    </group>

    <item >
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
